--- a/★★게임 다운로드 방법.md
+++ b/★★게임 다운로드 방법.md
@@ -2,4 +2,5 @@
 
 1. 메인 화면 우측 Releases메뉴에서 WhiteDay 선택.
 2. WhiteDay란 이름의 압축파일(.zip) 클릭 & 다운로드.
-3. 다운받은 파일 압축해제 후 실행파일 실행.
+3. 다운받은 파일을 압축해제한 후 실행파일 실행.
+
